# IRMP_STM32

./: .gitignore  ACKNOWLEDGEMENTS  CONTRIBUTORS  LIESMICH.md  MACROS  MACROS.md  MAKROS.md  PROTOCOLS  PROTOCOLS.md  README.md  make_mv_all.sh
RP2040/: CMakeLists.txt  README.md  make.sh  make_all.sh  make_pico.sh  make_zero.sh
RP2040/eeprom/: eeprom.c  eeprom.h
RP2040/irmp/: README.txt  irmp.c  irmp.h  irmpconfig.h  irmpprotocols.h  irmpsystem.h  irsnd.c  irsnd.h  irsndconfig.h
RP2040/src/: config.h  irmpmain.c  irmpmain.h  main.c  usb_hid.c  usb_hid.h  ws2812.c  ws2812.h  ws2812.pio
RP2040/timestamp/: CMakeLists.txt
RP2040/usb/: usb_descriptors.c
RP2xxx/: CMakeLists.txt  LIESMICH.md  README.md  cp_all.sh  make_all.sh  make_one.sh  make_pico.sh  make_pico_2.sh  make_seeed_xiao_rp2350.sh  make_zero.sh  pico-sdk-lib-tinyusb-hw-bsp-rp2040-family.c.diff
RP2xxx/eeprom/: eeprom.c  eeprom.h
RP2xxx/irmp/: README.txt  irmp.c  irmp.h  irmpconfig.h  irmpprotocols.h  irmpsystem.h  irsnd.c  irsnd.h  irsndconfig.h
RP2xxx/src/: config.h  irmpmain.c  irmpmain.h  main.c  usb_hid.c  usb_hid.h  ws2812.c  ws2812.h  ws2812.pio
RP2xxx/timestamp/: timestamp.c  timestamp.h
RP2xxx/usb/: usb_descriptors.c  usb_descriptors.c.bak
STM32F103/: IR.Bootloader.SimpleCircuit.coproj  IR.Bootloader.coproj  IR.MapleMini.coproj  IR.MapleMini_2k_Bootloader.coproj  IR.bootloader.coproj  IR.bootloader3k.coproj  IR.coproj  Make.config.template  Makefile  README  make_all.sh  mv_all.sh
STM32F103/patches/: eeprom.patch  irmp.patch  stm32f10x_conf.patch  system.patch  usb_hid.patch  usb_hid_gcc49_fix.patch
STM32F103/scripts/: arm-gcc-link-bootloader.ld  arm-gcc-link-bootloader3k.ld  arm-gcc-link-bootloader5k.ld  arm-gcc-link-maple.ld  arm-gcc-link.ld  prepare.bat  prepare.sh
STM32F103/src/: arm_cpuid.c  arm_cpuid.h  config.h  irmpmain.c  irmpmain.h  irsndmain.h  main.c  romtable.c  st_link.c  st_link.h  st_link_leds.c  st_link_leds.h  usb_hid.c  usb_hid.h
STM32F103x8/: Make.config.template  Makefile
STM32F103xC/: IR.MapleMini_Bootloader.coproj  IR.no_bootloader.DEBUG.coproj  IR.no_bootloader.coproj  Makefile  README  irmp_modulation_off.diff  make_Blue.sh  make_MapleMini_2k.sh  make_black.sh  make_blueDev.sh  make_blueDev_TM.sh  make_blueDev_oBL.sh
STM32F105/: IR.Bootloader.coproj  IR.coproj  Makefile  make_all.sh  mv_all.sh
STM32F105xC/: Makefile
STM32F303/: F303.Bootloader.coproj  Makefile
STM32F303xC/: F303.Bootloader.coproj  Makefile  make_all.sh  mv_all.sh
STM32F401/: F401.BL.coproj  Makefile
STM32F401xC/: Makefile
STM32F401xE/: Makefile
binaries/: README
bootloader/: FlashDFUSe.sh  FlashDFUjrie.bat  FlashDFUjrie.sh  FlashDFUmaple.bat  FlashDFUmaple.sh  README  ReadDFUjrie.bat  ReadDFUjrie.sh  bootloader.blue.3k.diff  bootloader.blue.5k.diff  bootloader.blue.diff  bootloader.dev.3k.diff  bootloader.dev.5k.diff  bootloader.dev.diff  bootloader.red.3k.diff  bootloader.red.5k.diff  bootloader.uni.diff
bootloader_STM32F103/: DFUSe.sh  FlashDFUSe.bat  FlashDFUSe.sh  README  bootloader.blue-rmp.diff  bootloader.dev-bd.diff  bootloader.red.diff
doc/: README
hardware/: Black_OC_jr7.brd  Black_OC_jr7.sch  Black_jr5.brd  Black_jr5.sch  CONTRIBUTORS  Maple_Mini_jr1.brd  Maple_Mini_jr1.sch  README  Stick1_jr1.brd  Stick1_jr1.sch  TSOP_jr3.brd  TSOP_jr3.sch  Verbinder_jr1.brd  Verbinder_jr1.sch
irmplircd/: 70-irmp.rules  80-irmp.rules  LIESMICH.md  README  README.md  irmpexec.map  irmpexec.service  irmplircd.conf  irmplircd.service  log_KEY_REFRESH.sh  vdrshutdown  vdrshutdown.IRMP_STM32
stm32FWupgrade/: README  dfu.c  dfu.h
stm32IRalarm/: 80-irmp.rules  Makefile  README  stm32IRalarm.c
stm32IRalarm_new_protocol/: README
stm32IRconfig/: 80-irmp.rules  Makefile  README  irmplircd@.service  stm32IRconfig.c
stm32IRconfig_gui/: MACROS  Makefile  stm32IRconfig_gui.cpp
stm32IRconfig_new_protocol/: Makefile  README  stm32IRconfig.c
stm32IRstatusled/: Makefile  README  stm32IRstatusled  stm32IRstatusled.c
test-suite/: README  README.md  compare_testfiles.sh  test_snd_rcv_all_loop.sh  testreference
vdr-plugin-irmplirc/: HISTORY  LIESMICH  Makefile  README  irmplirc.c  protocols.h
vdr-plugin-statusleds2irmplirc/: HISTORY  Makefile  README  statusleds2irmplirc.c
(+236 files in other folders)
